[gd_scene load_steps=10 format=3 uid="uid://dh5rl5k4avu6f"]

[ext_resource type="Script" uid="uid://7x7gc4nvne4w" path="res://Assets/Scenes/Object/Prop/StateProp.gd" id="2"]
[ext_resource type="SpriteFrames" uid="uid://dqli5evs3b8i1" path="res://Assets/PowerStates/PowerPropFrames.tres" id="2_t75ch"]
[ext_resource type="AudioStream" uid="uid://dgcruad7460mx" path="res://Assets/Audio/smbdx_powerup.wav" id="3"]
[ext_resource type="AudioStream" uid="uid://bxwg53m2w64ki" path="res://Assets/Audio/smbdx_sprout.wav" id="4"]

[sub_resource type="RectangleShape2D" id="1"]
size = Vector2(16, 14)

[sub_resource type="RectangleShape2D" id="4"]
size = Vector2(16, 16)

[sub_resource type="Animation" id="9"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="10"]
resource_name = "hit"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.3, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(0.5, 1, 2, -2, 1, -2),
"update": 0,
"values": [Vector2(0, 15), Vector2(0, -6), Vector2(0, -6), Vector2(0, 0), Vector2(0, 2), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(2, 1, 1, -2, 1, -2),
"update": 0,
"values": [Vector2(1.8, 1.8), Vector2(3, 3), Vector2(2.4, 3.3), Vector2(3, 3), Vector2(3.6, 2.4), Vector2(3, 3)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_i33fx"]
_data = {
&"RESET": SubResource("9"),
&"hit": SubResource("10")
}

[node name="PowerProp" type="CharacterBody2D"]
visibility_layer = 8
texture_filter = 1
collision_layer = 0
script = ExtResource("2")
hit_state = 2

[node name="AnimatedSprite" type="AnimatedSprite2D" parent="."]
sprite_frames = ExtResource("2_t75ch")
animation = &"我超 冰"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 1)
shape = SubResource("1")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("4")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_i33fx")
}

[node name="PowerUP" type="AudioStreamPlayer" parent="."]
process_mode = 3
stream = ExtResource("3")

[node name="HitAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4")

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
